<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.surprising</groupId>
        <artifactId>surprising-parent</artifactId>
        <version>1.0.0-SNAPSHOT</version>
        <relativePath/>
    </parent>

    <artifactId>currency-sdks</artifactId>
    <packaging>pom</packaging>
    <name>currency-sdks-parent</name>
    <description>Parent and aggregator for blockchain currency SDK modules</description>

    <properties>
        <guava.version>30.0-jre</guava.version>
        <lombok.version>1.18.42</lombok.version>
        <fastjson.version>1.2.75</fastjson.version>
        <spongycastle.version>1.58.0.0</spongycastle.version>
        <bcprov-jdk15on.version>1.61</bcprov-jdk15on.version>
        <bcprov-jdk16.version>1.46</bcprov-jdk16.version>
        <scrypt.version>1.4.0</scrypt.version>
        <bitcoinj.version>0.15.8</bitcoinj.version>
        <jackson.version>2.10.0</jackson.version>
        <commons-codec.version>1.12</commons-codec.version>
        <commons-lang3.version>3.9</commons-lang3.version>
        <config.version>1.3.3</config.version>
        <slf4j-jdk14.version>1.8.0-beta4</slf4j-jdk14.version>
        <okhttp.version>4.0.1</okhttp.version>
        <retrofit.version>2.6.1</retrofit.version>
        <jsonrpc4j.version>1.5.3</jsonrpc4j.version>
        <jcip-annotations.version>1.0</jcip-annotations.version>
        <jsr305.version>2.0.1</jsr305.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- internal modules -->
            <dependency>
                <groupId>com.surprising</groupId>
                <artifactId>bitcoin-sdk</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.surprising</groupId>
                <artifactId>bitcoincash-sdk</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.surprising</groupId>
                <artifactId>doge-sdk</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.surprising</groupId>
                <artifactId>litecoin-sdk</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.surprising</groupId>
                <artifactId>tron-sdk</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.surprising</groupId>
                <artifactId>wallet-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.surprising</groupId>
                <artifactId>wallet-client</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- cross-group internal modules -->
            <dependency>
                <groupId>com.surprising</groupId>
                <artifactId>common</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- external libs -->
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>fastjson</artifactId>
                <version>${fastjson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.madgag.spongycastle</groupId>
                <artifactId>core</artifactId>
                <version>${spongycastle.version}</version>
            </dependency>
            <dependency>
                <groupId>com.madgag.spongycastle</groupId>
                <artifactId>prov</artifactId>
                <version>${spongycastle.version}</version>
            </dependency>
            <dependency>
                <groupId>org.bouncycastle</groupId>
                <artifactId>bcprov-jdk15on</artifactId>
                <version>${bcprov-jdk15on.version}</version>
            </dependency>
            <dependency>
                <groupId>org.bouncycastle</groupId>
                <artifactId>bcprov-jdk16</artifactId>
                <version>${bcprov-jdk16.version}</version>
            </dependency>
            <dependency>
                <groupId>com.lambdaworks</groupId>
                <artifactId>scrypt</artifactId>
                <version>${scrypt.version}</version>
            </dependency>
            <dependency>
                <groupId>org.bitcoinj</groupId>
                <artifactId>bitcoinj-core</artifactId>
                <version>${bitcoinj.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-annotations</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-core</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>${commons-codec.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>
            <dependency>
                <groupId>com.typesafe</groupId>
                <artifactId>config</artifactId>
                <version>${config.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-jdk14</artifactId>
                <version>${slf4j-jdk14.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j-jdk14.version}</version>
            </dependency>
            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>okhttp</artifactId>
                <version>${okhttp.version}</version>
            </dependency>
            <dependency>
                <groupId>com.squareup.retrofit2</groupId>
                <artifactId>retrofit</artifactId>
                <version>${retrofit.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.briandilley.jsonrpc4j</groupId>
                <artifactId>jsonrpc4j</artifactId>
                <version>${jsonrpc4j.version}</version>
            </dependency>
            <dependency>
                <groupId>net.jcip</groupId>
                <artifactId>jcip-annotations</artifactId>
                <version>${jcip-annotations.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.code.findbugs</groupId>
                <artifactId>jsr305</artifactId>
                <version>${jsr305.version}</version>
            </dependency>
            <dependency>
                <groupId>jakarta.annotation</groupId>
                <artifactId>jakarta.annotation-api</artifactId>
                <version>2.1.1</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <source>21</source>
                        <target>21</target>
                        <fork>true</fork>
                        <compilerArgs>
                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
                        </compilerArgs>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
            </plugins>
    </build>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <modules>
        <module>bitcoin-sdk</module>
        <module>bitcoincash-sdk</module>
        <module>doge-sdk</module>
        <module>litecoin-sdk</module>
        <module>tron-sdk</module>
        <module>wallet-common</module>
        <module>wallet-client</module>
    </modules>
</project>
